# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
