[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Tech Hunter stephanienwankwo0@gmail.com"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
tokio = {version ="1.41.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"]}
config = "0.13"
syn = { version = "2.0", features = ["parsing"] }
dotenv-build = "0.1.1"
dotenv = "=0.10.0"
log = "0.4"
env_logger = "0.11.5"
chrono = "0.4.38"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
once_cell = "1.18"  # or whatever the latest version is
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"

[dev-dependencies]
reqwest  = "0.12.9"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-async-std",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
